---
sidebar: sidebar 
permalink: release-notes/whats-new-9161.html 
keywords: 'what"s new, release notes, 9.16.1, asa r2, asa a1k, asa a90, asa a70' 
summary: Descubra las nuevas funcionalidades disponibles en ONTAP 9.16,1 para los sistemas ASA R2. 
---
= Novedades de ONTAP 9.16,1 para los sistemas ASA R2
:hardbreaks:
:allow-uri-read: 
:nofooter: 
:icons: font
:linkattrs: 
:imagesdir: ../media/


[role="lead"]
Descubra las nuevas funcionalidades disponibles en ONTAP 9.16,1 para los sistemas ASA R2.



== Protección de datos

[cols="2,4"]
|===
| Actualizar | Descripción 


| link:../data-protection/manage-consistency-groups.html["Soporte para grupos de coherencia jerárquicos"] | Los grupos de consistencia jerárquicos le permiten crear un grupo de consistencia primario que contiene varios grupos de consistencia secundarios. De esta forma se simplifica la protección y la gestión de datos para estructuras de datos complejas. 
|===


== Eficiencia del almacenamiento

[cols="2,4"]
|===
| Actualizar | Descripción 


| Soporte para reequilibrio automático de unidades de almacenamiento | ONTAP reequilibrará de forma automática las unidades de almacenamiento en sus zonas de disponibilidad de almacenamiento con el fin de optimizar el rendimiento y la utilización de la capacidad. 


| De forma predeterminada, la desasignación del espacio NVMe está habilitada  a| 
La desasignación de espacio (también denominada «perforación» y «UNMAP») está habilitada para los espacios de nombres de NVMe de forma predeterminada. La desasignación de espacio permite que un host desasigne bloques no utilizados de espacios de nombres para reclamar espacio.

Esto mejora considerablemente la eficiencia del almacenamiento general, especialmente en sistemas de archivos con una alta rotación de datos.

|===