@@ -1713,7 +1713,6 @@
   <block id="ee498a1797cb05156ed6a63b8ff17543" category="paragraph"><block ref="2e81c1e2e7e67baddc7dd1eab1535a95" category="inline-link-macro-rx"></block> para replicar las snapshots del grupo de consistencia secundario desconectado en un clúster remoto como un grupo de coherencia único.</block>
   <block id="ab8f09c8990747589e661d2b7b0d3f20" category="summary">Los sistemas R2 de ASA (ASA A1K, A90, A70) ofrecen una solución unificada de hardware y software para una experiencia simplificada para clientes solo de SAN.</block>
   <block id="2168b2f72c5b19d6c97100664276ea67" category="searchtitle">Obtenga información sobre los sistemas A1K, A90 y A70 de ASA</block>
-  <block id="a2d4e1cad7dfa6160fb66fdbda1b87c5" category="paragraph">Los sistemas R2 de ASA son compatibles con todos los protocolos SAN (iSCSI, FC, NVMe/FC, NVMe/TCP). Los protocolos iSCSI, FC y NVMe/FC admiten una arquitectura activo-activo simétrica para la multivía, de modo que todas las rutas entre los hosts y el almacenamiento estén activas/optimizadas. Los protocolos iSCSI y NVMe/TCP admiten rutas directas entre los hosts y el almacenamiento.</block>
   <block id="109a51a8a2c0a685a3c75a58d3c4230b" category="summary">Para comenzar con un sistema ASA R2 (ASA A1K, A90, A70), instale el hardware, configure el clúster, configure el acceso a los datos y aprovisione el almacenamiento.</block>
   <block id="1e6107a968feb6567db48861306cc49f" category="searchtitle">Instale y configure los sistemas de almacenamiento A1K, A90 y A70 de ASA</block>
   <block id="e5c51f544e69319bec042113911e203e" category="paragraph"><block ref="1284f4e581f500fae0f4daa3e9543a0c" category="inline-link-macro-rx"></block> Su sistema ASA R2 e implementarlo en su entorno ONTAP.</block>
@@ -1763,4 +1762,9 @@
   <block id="3214e36fd00eb6d4da6f5d9b64f41cb1" category="sidebar">Gestión de unidades de almacenamiento</block>
   <block id="611bc8bee4d5b03a55be78ab0ca75f66" category="sidebar">Mueva las unidades de almacenamiento</block>
   <block id="ffb5ca95f1d59040ebadb90640b1970b" category="cell"><block ref="ffb5ca95f1d59040ebadb90640b1970b" category="inline-link-macro-rx"></block></block>
+  <block id="07f2a299db43ab53ccb5d7b05918e3fc" category="paragraph">Los sistemas R2 de ASA son compatibles con todos los protocolos SAN (iSCSI, FC, NVMe/FC, NVMe/TCP). Los protocolos iSCSI, FC, NVMe/FC y NVMe/TCP admiten una arquitectura activo-activo simétrica para la multivía, de modo que todas las rutas entre los hosts y el almacenamiento estén activas/optimizadas. Los protocolos iSCSI y NVMe/TCP admiten rutas directas entre los hosts y el almacenamiento.</block>
+  <block id="30388d1a3ab1a01f6930553a577eb80b" category="section-title">Compatibilidad con protocolos</block>
+  <block id="de67fc8f6fb798124dcbf65615888af5" category="inline-link-macro">Compatibilidad de NVMe para multivía activo-activo simétrico</block>
+  <block id="ac187c37acbb455a3ec9ef006a79fdf8" category="cell"><block ref="ac187c37acbb455a3ec9ef006a79fdf8" category="inline-link-macro-rx"></block></block>
+  <block id="ac12d691d1b6c417de929f3b833cef99" category="cell">NVMe/FC y NVMe/TCP ahora admiten arquitectura activo-activo simétrica para la multivía, de modo que todas las rutas entre los hosts y el almacenamiento estén activas/optimizadas.</block>
 </blocks>
